Re-sync with Go b422466: rulings 6, 7, 10a, 10b, 11, 16, 19 in Java; lockfile 3c22690; SPA 642f5da
Go moved overnight (the owner's agent landed ba45035..b422466), so the
lockfile is re-vendored (246 operations, revoke-previous-secret joins the
corpus), the embedded SPA refreshed, and eleven stale allow-list entries
deleted. Java now: clientScoped honoured on event-type create/update and
answered on every read (/api and BFF); client_credentials for a client
without a principal is 400 unauthorized_client with the attempt row;
app: is a reserved service-account namespace (RESERVED_CODE); unknown
identity-provider type, config value type and connection status are 400
at the wire; the BFF scheduled-job list confines non-anchors to their
clients; batch event ingest is partial success with honest per-item
BAD_REQUEST slots; audit items without principalId are refused per slot.

Harness: an empty capture is a step error instead of masking every empty
string in the run. Corpus against Go b422466: 1,149 steps, 0 DIFF,
0 ERROR, 246/246 + 102/102. Frontend e2e: Java 49/49 (no pins left),
Go 44/49 on its first run (G1, G8 in the Go fix list). Reactor green.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013rANKxpEJqmviHyDGwJfUS